# Computer_Graphics

./: README.md
GIMP_Plugin_Py/: LICENSE  README-pt-BR.md  README.md  install_dependencies.sh
GIMP_Plugin_Py/GIMP_Colors_Experience/: gimp_plugin_colorsExperience.py
GIMP_Plugin_Py/GIMP_Face_Detection/: README-pt-BR.md  README.md  gimp_plugin_faceDetection.py  install_dependencies.sh
GIMP_Plugin_Py/GIMP_Image_Details/: gimp_plugin_viewDetails.py
Images/: cafeeiro_campo.npy  cheflera_variegata.npy  folha_cafeeiro_doente.npy
NumPy_Training/: RGB.py  RGB_test.py  img_2D-histogram.py  img_convert_rgb.py  img_details.py  img_draw.py  img_frequency.py  img_green_leaf_index.py  img_histogram.py  img_histogram_2D.py  img_ifv.py  img_numpy_training_1.py  img_numpy_training_1_details.py  img_numpy_training_1_draw.py  img_numpy_training_2_histogram.py  img_numpy_training_3_organize_pxColors.py  img_order_pixels.py  img_organize_pxColors.py
OpenCV_Cpp_Training/: README.md
OpenCV_training/: README.md  helloWorld.cpp
OpenCV_training/HelloWorld/: run  (+3 more)
OpenCV_training/Threshold/: CMakeLists.txt  threshold.cpp
Pandas_Training/: img_pandas_training_2.py  img_pandas_training_rgb_1.py
Scipy_Training/: img_scipy_training_1_details.py
TCC_OpenCV_Cpp/: Cópia_image_processing.cpp  README.md  create_leafs_diseases.hpp  dptcc.cpp  gladeGUI.cpp  gladeGUI.glade  gladeGUI.hpp  image_processing  image_processing.cpp  image_processing.hpp  image_tools.hpp  image_view.hpp  list_path.txt  main.cpp  makefile  run  test.sh  test_gladeGUI.cpp  test_input.sh  tools.hpp  tools_test.cpp
(+72 files in other folders)
